--- a/pages/login/public/css/common.scss
+++ b/pages/login/public/css/common.scss
@@ -272,3 +272,12 @@ page {
 	max-width: 750px;
   }
 }
+
+.outer-container-wrap {
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		
+		max-width: 1280px;
+		margin: 0 auto;
+}
