--- a/pages/member/public/css/index.scss
+++ b/pages/member/public/css/index.scss
@@ -711,15 +711,16 @@ uni-page-body {
 					width:50%!important;
 				}
 				.user-info-box {
-					width:600px;
+					min-width:600px;
 					
 					.user-box {
 						font-size:18px!important;
 						flex-direction: row!important;
 						place-content: space-between!important;
 						.combineMemeberId {
+							
 							.user-member {
-								width:60px;
+								width:100px;
 								margin-left:0px!important;
 								padding-left:0px!important;
 								padding-right:0px!important;
