--- a/pages/goods/public/css/detail.scss
+++ b/pages/goods/public/css/detail.scss
@@ -1,3 +1,11 @@
+.goods-container{
+	max-width: 1200px;
+	margin:0 auto;
+}
+.goodBottom {
+	max-width: 1200px;
+	margin:0 auto;
+}
 // 优惠券
 .goods-coupon {
 	position: relative;
