--- a/common/css/order_parment.scss
+++ b/common/css/order_parment.scss
@@ -233,13 +233,15 @@ view {
 .order-submit {
 	position: fixed;
 	z-index: 5;
-	left: 0;
 	bottom: 0;
-	width: 100vw;
+	max-width:1200px;
+	width:100%;
+	margin:0 auto;
 	height: 100rpx;
 	background: #fff;
 	text-align: right;
 	display: flex;
+	justify-content: flex-end;
 	align-items: center;
 
 	&.bottom-safe-area {
