--- a/pages/order/public/css/logistics.scss
+++ b/pages/order/public/css/logistics.scss
@@ -159,7 +159,7 @@
 		width: 120rpx;
 		height: 120rpx;
 		margin-right: 20rpx;
-		float: left;
+		//float: left;
 		image {
 			width: 100%;
 			height: 100%;
