--- a/pages/member/public/css/index.scss
+++ b/pages/member/public/css/index.scss
@@ -192,8 +192,8 @@ uni-page-body {
 			justify-content: center;
 
 			image {
-				width: 80px;
-				height: 80px;
+				width: 100%;
+				height: 100%;
 			}
 		}
 
