--- a/pages/member/public/css/index.scss
+++ b/pages/member/public/css/index.scss
@@ -97,7 +97,7 @@ uni-page-body {
 			text-decoration: none;
 			vertical-align: baseline;
 			text-align: center;
-			margin: 0;
+			margin: 5px;
 			min-width: 64px;
 			line-height: 36px;
 			padding: 0 16px;
